fix: CORS wildcard crash, initials whitespace crash, DuplicateKey handler
- Use allowedOriginPatterns when CORS origin is wildcard to avoid
  IllegalArgumentException from allowCredentials+wildcard combination
- Trim name before computing initials to prevent StringIndexOutOfBounds
  on whitespace-only input like "  "
- Add DuplicateKeyException handler to user-service GlobalExceptionHandler
  returning 409 instead of 500 on concurrent duplicate email/username race

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>